--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "babel-preset-expo": "^7.0.0",
+    "eslint": "^7.13.0",
+    "eslint-plugin-react": "^7.21.5",
     "schedule": "^0.4.0"
   },
   "private": true
