--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-expo": "^7.0.0",
     "eslint": "^7.13.0",
     "eslint-plugin-react": "^7.21.5",
+    "prettier": "^2.1.2",
     "schedule": "^0.4.0"
   },
   "private": true
